# AWS-Hybrid-Serverless

./: .eslintignore  .eslintrc  .gitignore  Dockerfile  README.md  package.json  serverless.yml
binaries/: serverlessSG
cloudformation/: iam.yml  template.yml
config/: common.js  prod.js
cpp/: CMakeLists.txt
cpp/src/: main.cpp
functions/: service.js
lib/: common.js  config.js  errors.js  worker.js
lib/services/: ecsIf.js  sqsIf.js  sqsIf.test.js
scripts/: sls-build.sh
test/support/: setup.js
test/support/fixtures/: ecsRunTaskResponse.json  execCommands.js  sqsResponseQueuedMsg.json  sqsResponseReadMsg.json
test/unit/functions/: service.test.js
test/unit/functions/__snapshots__/: service.test.js.snap
test/unit/lib/services/: ecsIf.test.js  sqsIf.test.js
